cmake_minimum_required(VERSION 3.12)
set(ProjectName "testcuda")
project(testcuda)
include_directories(${Source_DIR}/Mesh)
include_directories(${Source_DIR}/CUDA)
include_directories(${Source_DIR}/Experiment)
include_directories(${Source_DIR}/InputGenerator)
include_directories(${Source_DIR}/Predicates)
include_directories(${Source_DIR}/TetGen)

file(GLOB CUDA_SOURCE CUDA/*.h CUDA/*.cu)
#message(STATUS "DEBUG: CUDA src: ${CUDA_SOURCE}")
file(GLOB_RECURSE SOURCE ./*.h ./*.cpp)
list(FILTER SOURCE EXCLUDE REGEX ".*CUDA.*")
#set (EXCLUDE_DIR "/CUDA/")
#foreach (TMP_PATH ${SOURCES})
#    string (FIND ${TMP_PATH} ${EXCLUDE_DIR} EXCLUDE_DIR_FOUND)
#    if (NOT ${EXCLUDE_DIR_FOUND} EQUAL -1)
#        list (REMOVE_ITEM SOURCES ${TMP_PATH})
#    endif ()
#endforeach(TMP_PATH)
message(STATUS "DEBUG:  src: ${SOURCE}")

add_library(cudalib ${CUDA_SOURCE})
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(cudalib PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
endif()
target_compile_features(cudalib PUBLIC cxx_std_14)

add_executable(testcuda ${SOURCE})
target_link_libraries(testcuda cudalib)
